--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "web": "expo start --web",
     "eject": "expo eject"
   },
+  "bug_aws-amplify-react-native@4.1.2 has @0.19.1": "react-native-elements@2.0.1",
   "dependencies": {
     "expo": "~37.0.9",
     "react": "~16.13.1",
     "react-dom": "~16.13.1",
     "react-native": "0.62",
     "react-native-web": "~0.12.2",
+    "react-native-elements": "^2.0.1",
     "aws-amplify": "^3.0.11",
     "aws-amplify-react-native": "^4.1.2"
   },
